Add registration of channels
