# src/api_gen/models/all.ts
@@ -5,6 +5,8 @@ export * from '../models/AuthForgotPasswordDto'
 export * from '../models/AuthRegisterLoginDto'
 export * from '../models/AuthResetPasswordDto'
 export * from '../models/AuthUpdateDto'
+export * from '../models/Channel'
+export * from '../models/CreateChannelDto'
 export * from '../models/CreateGuildDto'
 export * from '../models/CreateIndividualUserDto'
 export * from '../models/CreateUserDto'
